<resources>
    <string name="app_name">MyData</string>
    <string name="video1_buttonName">5 Dicas para proteger seus dados pessoais</string>
    <string name="video2_buttonName">Perigos de segurança na internet</string>
    <string name="game1_buttonName">Crie uma senha segura</string>
    <string name="game2_buttonName">Quiz</string>
    <string name="game3_buttonName">Jogo da forca</string>

    <string name="valid_password_ref">Uma senha segura deve atender aos segintes requisitos:\n
    - Conter letras minúsculas;\n
    - Conter letras maiúsculas;\n
    - Conter números;\n
    - Conter caracteres especiais como por ex: @, #, $, %;\n
    - Conter no mínimo 8 caracteres.\n
    Exemplo de senha segura: M1nh@S3nh@.</string>
    <string name="type_your_pwd">Digite sua senha</string>
    <string name="bt_valid_pwd">Verificar</string>
    <string name="label_pwd_typed">Senha digitada:</string>

    <string name="valid_pwd">A senha é segura!</string>
    <string name="invalid_pwd">A senha NÃO é segura!</string>
    <string name="hasMoreThan7">Contém no mínimo 8 carácteres</string>
    <string name="hasLowerCase">Contém letra minúscula</string>
    <string name="hasUpperCase">Contém letra maiúscula</string>
    <string name="hasNum">Contém número</string>
    <string name="hasSpecialChar">Contém carácter especial</string>

    <string name="messageStartQuiz">Esse é um quiz rápido de 10 questões para testar seu conhecimento sobre as melhores práticas e garantir a segurança dos seus dados. Clique no botão abaixo para começar.</string>
    <string name="quizStartBt">Começar</string>
    <string name="quizStartOverBt">Começar de novo</string>
    <string name="quizNextQuestionBt">Próxima questão</string>
    <string name="noCheckedRadioBtMessage">Por favor, selecione uma opção.</string>
    <string name="inicialScreenBt">Voltar a tela inicial</string>
    <string name="resultQuiz">O seu resultado foi:</string>
    <string name="badNote">Seu desempenho não foi muito bom, procure se atualizar e conhecer as melhores práticas para garantir a segurança de seus dados.</string>
    <string name="regularNote">Seu desempenho foi bom porém sempre da para melhorar. Procure se atualizar e conhecer as melhores práticas para garantir a segurança de seus dados.</string>
    <string name="perfectNote">Você acertou todas!!! Continue assim para garantir a segurança de seus dados.</string>
    <string name="title_activity_create_password">Crie uma senha segura</string>
    <string name="title_activity_quiz">Quiz</string>

    <string name="gallows">A Forca</string>
    <string name="head">A Cabeça</string>
    <string name="body">O Corpo</string>
    <string name="arm">Um Braço</string>
    <string name="leg">Uma Perna</string>

</resources>